Routes Changelog
========================

1.3.2 (April xth, 2006)

*Backwards Incompatibilities*

* None

*New Features*

* None

*Bug Fixes*

* Fixed _filter bug with inclusion in match dict during matching, reported by David Creemer.



1.3.1 (April 4th, 2006)

*Backwards Incompatibilities*

* None

*New Features*

* Mapper has an optional attribute ``append_slash``. When set to ``True``, any URL's
  generated will have a slash appended to the end. 

*Bug Fixes*

* Fixed prefix option so that if the PATH_INFO is empty after prefix regexp, its set to
  '/' so the match proceeds ok.
* Fixed prefix bug that caused routes after the initial one to not see the proper url
  for matching. Caught by Jochen Kupperschmidt.



1.3 (Feb. 25th, 2006)

*Backwards Incompatibilities*

* None


*New Features*

* url_for keyword filters:
  - Named routes can now have a _filter argument that should specify a function that takes
    a dict as its sole argument. The dict will contain the full set of keywords passed to
    url_for, which the function can then modify as it pleases. The new dict will then be
    used as if it was the original set of keyword args given to url_for.

*Bug Fixes*

* Fixed Python 2.3 incompatibility due to using keyword arg for a sort statement
  when using the built-in controller scanner.



1.2 (Feb. 17th, 2006)
----------------

*Backwards Incompatibilities*

* If a named route doesn't exist, and a url_for call is used, instead of using the
  keyword arguments to generate a URL, they will be used as query args for the raw
  URL supplied.


*New Features*

* Routes Mapper additions:
  - If Mapper has debug=True, using match will return two additional values, the route
    that matched, if one did match. And a list of routes that were tried, and information
    about why they didn't pass.
* url_for enhancements:
  - Can now be used with 'raw' URL's to generate proper url's for static content that
    will then automatically include SCRIPT_NAME if necessary